changes made under NetBeans

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="utf-8">
 <title>Demo</title>
+<link href="css/style.css" rel="stylesheet">
 </head>
 <body>
     <h1>Demo</h1>
