--- a/index.html
+++ b/index.html
@@ -7,11 +7,7 @@
 </head>
 <body>
     <h1>Demo</h1>
-    <p>New line</p>
-    <p>Changed</p>
-    <p>Another line</p>
-    <p>Another update</p>
-    <p>CSCI107N</p>
-    <p>More stuff</p>
+    <p>This is some text</p>
+    <p>This is some more text</p>
 </body>
 </html>
