--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
     <h1>Demo</h1>
     <p>This is some text</p>
     <p>This is some more text</p>
+    <p>Line from the github browser</p>
 </body>
 </html>
