--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <meta charset="utf-8">
 <title>Demo</title>
 <link href="css/style.css" rel="stylesheet">
+<link href="css/mobile.css" rel="stylesheet" media="(max-width: 480px)">
 </head>
 <body>
     <h1>Demo</h1>
