--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <link href="css/style.css" rel="stylesheet">
 <link href="css/print.css" rel="stylesheet" media="print">
 <link href="css/mobile.css" rel="stylesheet" media="(max-width: 480px)">
+<link href="css/sign.css" rel="stylesheet" media="screen and (min-width: 1919px)">
 </head>
 <body>
     <h1>Demo</h1>
